<resources>
    <string name="app_name">ForeclosedHomes</string>
    <string name="select_a_city">Select a city</string>
    <string name="address">Address:</string>
    <string name="description">Description</string>
    <string name="size">Size:</string>
    <string name="property">Property:</string>
    <string name="price">Price:</string>
    <string name="contact">Contact:</string>
    <string name="telephone">Telephone:</string>
</resources>
