<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/darkGrey">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@android:color/white">

    <ImageView
        android:id="@+id/logoIv"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo_small"/>

    <LinearLayout
        android:id="@+id/descriptionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/logoIv"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/descriptionInfoTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Property type:"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/darkGrey"/>

        <TextView
            android:id="@+id/descriptionTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/description"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textAllCaps="true"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/addressInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/descriptionLayout"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Address: "
            android:textStyle="bold"
            android:textColor="@color/darkGrey"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/addressTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="16sp"
            android:paddingLeft="10dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/propertyInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/addressInfoLayout"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/propertyOfTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/darkGrey"
            android:text="Property of: "/>

        <TextView
            android:id="@+id/propertyTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/property"
            android:paddingLeft="10dp"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sizeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/propertyInfoLayout"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sizeInfoTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Size: "
            android:textColor="@color/darkGrey"
            android:textStyle="bold"
            android:textSize="16sp"/>


        <TextView
            android:id="@+id/sizeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:textSize="16sp"
            android:text="@string/size"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/priceLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sizeLayout"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/priceInfoTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/darkGrey"
            android:text="Price: "/>

        <TextView
            android:id="@+id/priceTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/price"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/contactLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/priceLayout"
        android:orientation="horizontal"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/contactInfoTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Contact: "
            android:textColor="@color/darkGrey"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/contactTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:textSize="16sp"
            android:text="@string/contact"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/telephoneLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/contactLayout">

        <TextView
            android:id="@+id/telephoneInfoTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/darkGrey"
            android:text="Telephone: "/>
        <TextView
            android:id="@+id/telephoneTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:textSize="16sp"
            android:text="@string/telephone"/>

    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>