<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="10dp"
    android:id="@+id/property_main"
    android:background="@color/darkGrey">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="@id/property_main"
        app:layout_constraintEnd_toEndOf="@id/property_main"
        app:layout_constraintTop_toTopOf="@id/property_main"
        app:layout_constraintBottom_toBottomOf="@id/property_main"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:background="@android:color/white">


    <LinearLayout
        android:id="@+id/infoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:id="@+id/desTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Property type "
            android:layout_marginTop="20dp"
            android:textColor="@color/darkGrey"
            android:textSize="16sp"
            android:textStyle="bold"
            />
    <TextView
        android:id="@+id/descriptionTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/darkGrey"
        android:text="@string/description"
        android:textSize="16sp"
        android:layout_marginStart="5dp"
        android:textAllCaps="true"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/addressLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/infoLayout">
        <TextView
            android:id="@+id/addressInfoTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Address: "
            android:textColor="@color/darkGrey"
            android:layout_marginTop="20dp"
            android:textSize="14sp"
            android:textStyle="bold"/>

    <TextView
        android:id="@+id/addressTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/address"
        android:layout_marginStart="5dp"
        android:textSize="14sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sizeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/addressLayout"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sizeInfoTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Size: "
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/darkGrey"/>
    <TextView
        android:id="@+id/sizeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:text="@string/size"
        android:textSize="14sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/propertyLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sizeLayout"
        android:layout_margin="5dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/propertyInfoTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Property of: "
            android:textSize="14sp"
            android:textColor="@color/darkGrey"
            android:textStyle="bold"/>
    <TextView
        android:id="@+id/propertyTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/property"
        android:layout_marginStart="5dp"
        android:textSize="14sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/contactLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/propertyLayout"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/contactInfoTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="@color/darkGrey"
            android:text="Contact: "/>

    <TextView
        android:id="@+id/contactTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:layout_marginStart="5dp"
        android:text="Contact:" />

    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>